// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamo reducer default 1`] = `
Object {
  "status": Array [],
  "userOrders": Array [],
}
`;

exports[`dynamo reducer status 1`] = `
Object {
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "userOrders": Array [],
}
`;

exports[`dynamo reducer userOrders 1`] = `
Object {
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "userOrders": Array [
    Object {
      "userOrders": "test",
    },
  ],
}
`;
